@@ -13,11 +13,11 @@ def is_process_running(proc):
 def add_info(report):
     attach_gsettings_package(report, 'gnome-shell-common')
     attach_gsettings_schema(report, 'org.gnome.desktop.interface')
-    
+
     result = ''
 
     dm_list = apport.hookutils.command_output(['sh', '-c', 
-	'apt-cache search \"display manager\" | cut -d \' \' -f1 | grep dm$'])
+	'apt-cache search \"display manager\" | cut -d \' \' -f1 | grep -E \"dm$|gdm3\"'])
 
     for line in dm_list.split('\n'):
         if (is_process_running(line)):
@@ -25,12 +25,3 @@ def add_info(report):
             break
 
     report['DisplayManager'] = result
-
-    HOME = os.path.expanduser("~")
-    if result == 'gdm':
-        attach_file_if_exists(report, HOME+'/.cache/gdm/session.log',key='gdmSessionLog')
-    else:   
-        attach_file_if_exists(report, HOME+'/.xsession-errors',key='XsessionLog')
-
-
-	
