@@ -7,6 +7,12 @@ gnome-shell (3.20.3-1) UNRELEASED; urgency=medium
   * New upstream release.
   * Refresh patches.
 
+  [ Jeremy Bicha ]
+  * Update apport hook to recognize gdm3 and to not try to attach
+    obsolete log files
+  * Update Ubuntu's dependency on gnome-icon-theme-full to
+    adwaita-icon-theme-full
+
  -- Laurent Bigonville <bigon@debian.org>  Mon, 13 Jun 2016 15:33:36 +0200
 
 gnome-shell (3.20.2-3) unstable; urgency=medium
